--- a/HTML/style.css
+++ b/HTML/style.css
@@ -39,18 +39,18 @@
    
    
 }
-.navbar-brand{
+.home-navbar-brand{
     margin-top: 10px;
    margin-left: 17px;
     max-width: 175px;
     max-height: 130px;
 }
-.navbar-nav{
+.home-navbar-nav{
   margin-top: 5px;
   margin-bottom: 65px;
 
 }
-.nav-link{
+.home-nav-link{
     font-family: 'Roboto', sans-serif;
     font-size: 17px;
     text-align: center;
@@ -227,10 +227,7 @@ color: white;
     font-size: 40px;
     font-weight: bolder;
 }
-.blog-row{
-  
 
-}
 .blog-card{
     margin: 2%;
     box-shadow: 0px 0px 30px #E4EBF0;
@@ -467,3 +464,145 @@ opacity: 1;
 height: 40px;
 width: 99px;
 }
+
+
+/*FAQ*/
+
+
+
+/*nav bar*/
+
+.faq-navbar{
+    background: #525252 0% 0% no-repeat padding-box;
+opacity: 0.8;
+
+
+  
+}
+
+
+.faq-navbar-brand{
+   top: 6px;
+left: 15px;
+width: 73px;
+height: 54px;
+}
+
+.faq-nav-link{
+    font-family: 'Roboto', sans-serif;
+    font-size: 17px;
+    text-align: center;
+   letter-spacing: 0px;
+   color: #FFFFFF;
+   opacity: 1;
+   margin: 3px;
+   text-decoration: none;
+}
+
+
+.faq-nav-link-border{
+   
+   
+    background: #29626D;
+    border: 1px solid #FFFFFF80;
+    
+    border-radius: 20px;
+    opacity: 1;
+   text-decoration: none;
+   margin: 3px;
+   
+   
+}
+
+/*image*/
+
+.faq-image{
+    max-height: 370px;
+}
+
+
+/*content*/
+
+
+
+.faq-content-container-child{
+    text-align: center;
+   
+   margin-left: 17%;
+    margin-right: 17%;
+    
+    
+}
+
+.faq-content-title-text{
+    color: #4F4F4F;
+    font-size: 35px;
+    font-family: 'Roboto', sans-serif;
+
+}
+.faq-content-seprator{
+    max-height: 50px;
+    margin-top: -25px;
+   
+}
+.faq-content-title-intro{
+    color: #4F4F4F;
+    font-size: 18px;
+    font-family: 'Roboto', sans-serif;
+    
+    text-align: center;
+    
+
+}
+
+
+
+
+.content-toggle-button-text{
+    font-size: 24px;
+    font-family: 'Roboto', sans-serif;
+    
+    
+
+}
+.content-toggle-on-col{
+    background-color: #29626D; 
+    color: white;
+
+}
+.content-toggle-off-col{
+    background-color: white;
+    color: black;
+
+}
+
+.faq-content-bullets-bold{
+    font-size: 15px;
+    font-family: 'Roboto', sans-serif;
+    font-weight: bold;
+    color: #646464;
+    text-align: left;
+    
+}
+.faq-content-bullets-ligth{
+    font-size: 15px;
+    font-family: 'Roboto', sans-serif;
+    
+    color: #646464;
+    text-align: left;
+    
+}
+.faq-privacy-text{
+    font-size: 14px;
+    font-family: 'Roboto', sans-serif;
+    
+    color: white;
+    text-align: center;
+    
+
+}
+
+
+
+
+
