--- a/HTML/style.css
+++ b/HTML/style.css
@@ -604,5 +604,168 @@ height: 54px;
 
 
 
+/*faq ends*/
+
+
+
+/*Price*/
+
+.price-navbar{
+    background: #525252 0% 0% no-repeat padding-box;
+opacity: 0.8;
+ 
+}
+
+
+.price-navbar-brand{
+   top: 6px;
+left: 15px;
+width: 73px;
+height: 54px;
+}
+
+.price-nav-link{
+    font-family: 'Roboto', sans-serif;
+    font-size: 17px;
+    text-align: center;
+   letter-spacing: 0px;
+   color: #FFFFFF;
+   opacity: 1;
+   margin: 3px;
+   text-decoration: none;
+}
+
+
+.price-nav-link-border{
+   
+   
+    background: #29626D;
+    border: 1px solid #FFFFFF80;
+    border-radius: 20px;
+    opacity: 1;
+   text-decoration: none;
+   margin: 3px;
+   
+   
+}
+
+/*image*/
+
+.price-image{
+    max-height: 370px;
+}
+
+
+/* price section*/
+
+.price-price-container{
+    text-align: center;
+}
+
+.price-content-title-text{
+    color: #4F4F4F;
+    font-size: 35px;
+    font-family: 'Roboto', sans-serif;
+    margin-top: 15px;
+
+}
+.price-content-seprator{
+    max-height: 50px;
+    margin-top: -25px;
+   
+}
+
+
+.price-box{
+    margin-left: 32%;
+    margin-right: 32%;
+    border: 1px solid #B0C9CE;
+}
+
+
+.price-box-title{
+    background-color: #1D7A8C;
+   
+    font-size: 28px;
+    font-family: 'Roboto', sans-serif;
+    color: white;
+}
+
+.price-price-box-check-points{
+    color: #646464;
+     font-size: 16px; 
+     font-family: 'Roboto', sans-serif;
+}
+
+
+.price-extra-service{
+    margin-left: 12%;
+    margin-right: 12%;
+}
+
+.price-extra-service-card{
+    max-width: 370px;
+    max-height: 480px;
+}
+.price-extra-service-card-image{
+    max-width: 108px;
+    max-height: 108px;
+   
+}
+
+.price-extra-service-card-text-simple{
+    color: #646464;
+     font-size: 16px; 
+     font-family: 'Roboto', sans-serif;
+
+
+}
+.price-extra-service-card-text-bold{
+    color: #646464;
+     font-size: 16px; 
+     font-family: 'Roboto', sans-serif;
+     font-weight: bold;
+     margin-top: -3%;
+
+}
+
+/*what we include*/
+
+.price-include-container{
+    background-color: #F6F6F6;
+}
+
+.price-include-row{
+    margin-left: 10%;
+    margin-right: 10%;
+}
+
+.price-include-card{
+    display: inline;
+}
+
+.price-include-card-text-simple{
+    color: #646464;
+     font-size: 16px; 
+     font-family: 'Roboto', sans-serif;
+
+
+}
+.price-include-card-text-bold{
+    color: #646464;
+     font-size: 20px; 
+     font-family: 'Roboto', sans-serif;
+     font-weight: bold;
+     
+
+}
+
+
+
+
+
+
+
+
 
 
