--- a/HTML/style.css
+++ b/HTML/style.css
@@ -830,10 +830,26 @@ height: 54px;
 }
 
 
-/*map*/
 
-.contact-map-container{
+/*About page*/
+
+.about-content-text{
+    text-align: center;
+
+    color: #4F4F4F;
+    font-size: 16px; 
+    font-family: 'Roboto', sans-serif;
+    font-weight: normal;
+   
     
+
+}
+
+.about-content-container{
+    margin-left: 10%;
+    margin-right: 10%;
+    text-align: center;
+
 }
 
 
