--- a/HTML/style.css
+++ b/HTML/style.css
@@ -854,8 +854,54 @@ height: 54px;
 
 
 
+/*about page ends*/
 
 
+
+/*Service provider>become service provider  starts*/
+
+.become-service-provider-header-container{
+    
+    
+  
+
+    background-image: url("image/become-a-pro-banner.png");
+    
+    height: auto;
+   
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+   
+   
+}
+
+.become-service-provider-form{
+    background-color: white;
+    margin-left: 36%;
+    margin-right: 36%;
+    box-shadow: 0px 0px 16px #00000026;
+    padding: 2%;
+
+}
+
+.become-service-provider-form-title{
+    text-align: center;
+
+    color: #4F4F4F;
+    font-size: 23px; 
+    font-family: 'Roboto', sans-serif;
+    font-weight: bold;
+}
+
+.become-service-provider-form-inputs{
+    margin-bottom: 5%;
+    padding: 3%;
+}
+
+
+/*Service provider>become service provider  ends*/
 
 
 
