--- a/HTML/style.css
+++ b/HTML/style.css
@@ -873,6 +873,7 @@ height: 54px;
     background-repeat: no-repeat;
     background-size: cover;
     position: relative;
+    text-align: center;
    
    
 }
@@ -883,6 +884,7 @@ height: 54px;
     margin-right: 36%;
     box-shadow: 0px 0px 16px #00000026;
     padding: 2%;
+    text-align: center;
 
 }
 
@@ -899,6 +901,53 @@ height: 54px;
     margin-bottom: 5%;
     padding: 3%;
 }
+.become-service-provider-form-button{
+    background: #1D7A8C 0% 0% no-repeat padding-box;
+border-radius: 23px;
+color: white;
+    font-size: 16px; 
+    font-family: 'Roboto', sans-serif;
+    font-weight: bold;
+    padding: 1% 5% 1% 5%;
+    max-width: 50%;
+
+}
+
+.become-service-provider-content-container{
+   text-align: center;
+
+}
+
+.become-service-provider-content-title{
+    font-size: 40px; 
+    font-family: 'Roboto', sans-serif;
+    font-weight: bold;
+   
+
+}
+
+.become-service-provider-content-card{
+    margin-left: 15%;
+    margin-right: 15%;
+    text-align: center;
+}
+.become-service-provider-content-card-text-title{
+    font-size: 30px; 
+    font-family: 'Roboto', sans-serif;
+    font-weight: bold;
+    
+   
+
+}
+.become-service-provider-content-card-text-normal{
+    font-size: 18px; 
+    font-family: 'Roboto', sans-serif;
+    font-weight: normal;
+   
+
+}
+
+
 
 
 /*Service provider>become service provider  ends*/
