--- a/HTML/style.css
+++ b/HTML/style.css
@@ -1328,6 +1328,7 @@ div.user-icon {
 .admin-user-table-col{
     background-color: #0000001A;
     padding: 20px;
+  
    
 }
 .admin-user-table-col p{
@@ -1353,6 +1354,13 @@ div.user-icon {
     padding: 20px;
    
     
+}
+
+admin-user-form-search{
+    background-color: #1FB6FF;
+    color: white;
+    border: 1px solid #DEDDDD;
+
 }
 
 .admin-user-form-clear{
@@ -1385,6 +1393,7 @@ div.user-icon {
     position: relative;
     display: inline-block;
     cursor: pointer;
+    margin-left: 20px;
 }
 
 .popup .popuptext {
@@ -1492,6 +1501,7 @@ div.user-icon {
 
 .admin-table tr{
     border: 1px solid #ccc;
+    margin: 10px;
 
 
 }
@@ -1500,6 +1510,7 @@ div.user-icon {
     font-weight: 700;
     padding: 12px;
     margin: 0%;
+    color: #646464;
 
 }
 .admin-table tbody p{
@@ -1509,4 +1520,27 @@ div.user-icon {
     margin: 0%;
 }
 
+.copyright{
+    color: #A2A6A8;
+    font-size: 14px;
+   margin: 10px 0px 70px 10px;
+}
+
 /*admin user management ends*/
+
+
+.new {
+    border: 1px solid #F2BB37;
+    background-color: #F2BB37;
+    color: #ffffff;
+    font-size: 13px;
+    padding: 4px 11px 5px 11px;
+}
+
+.pending {
+    border: 1px solid #1FB6FF;
+    background-color: #1FB6FF;
+    color: #ffffff;
+    font-size: 13px;
+    padding: 4px 11px 5px 11px;
+}
