--- a/Helperland/helperland1.0/Views/Public/Index.cshtml
+++ b/Helperland/helperland1.0/Views/Public/Index.cshtml
@@ -47,10 +47,10 @@
           <div class="navbar-nav home-navbar-nav ms-auto">
 
             <a class="nav-link home-nav-link nav-link-book-a-cleaner" href="#">Book a Cleaner</a>
-            <a class=" nav-link home-nav-link " href="Home/price"> Prices</a>
+            <a class=" nav-link home-nav-link " href="Public/price"> Prices</a>
             <a class="nav-link home-nav-link ">Our Guarantee</a>
             <a class="nav-link home-nav-link ">Blog</a>
-            <a class="nav-link home-nav-link ">Contact us</a>
+            <a class="nav-link home-nav-link " href="Public/contactus">Contact us</a>
             <a class="nav-link home-nav-link  nav-link-login">Login</a>
             <a class="nav-link home-nav-link  nav-link-become-a-helper">Become a Helper</a>
             <a class="nav-link home-nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
@@ -553,9 +553,9 @@
       <div class="col-sm-6 footer-nav-col">
 
         <a class="footer-nav-link ">HOME</a>
-        <a class="footer-nav-link ">ABOUT</a>
+        <a class="footer-nav-link"  href="Public/about">ABOUT</a>
         <a class="footer-nav-link ">TESTIMONIALS</a>
-        <a class="footer-nav-link ">FAQ</a>
+        <a class="footer-nav-link " href="Public/faq">FAQ</a>
         <a class="footer-nav-link ">INSURANCE</a>
         <a class="footer-nav-link ">IMPRESSUM</a>
 
