--- a/Helperland/helperland1.0/Views/Public/price.cshtml
+++ b/Helperland/helperland1.0/Views/Public/price.cshtml
@@ -93,13 +93,13 @@
             <div style="text-align: left; margin-left: 25%;">
 
 
-                <p class="price-price-box-check-points"><img class="img-fluid" src="image/forma-1_5.png">
+                <p class="price-price-box-check-points"><img class="img-fluid"src="../image/forma-1_5.png">
                     Lower prices</p>
 
-                <p class="price-price-box-check-points"><img class="img-fluid" src="image/forma-1_5.png">
+                <p class="price-price-box-check-points"><img class="img-fluid"src="../image/forma-1_5.png">
                     Easy online & secure payment</p>
 
-                <p class="price-price-box-check-points"><img class="img-fluid" src="image/forma-1_5.png">
+                <p class="price-price-box-check-points"><img class="img-fluid"src="../image/forma-1_5.png">
                     Easy amendment</p>
 
             </div>
@@ -127,7 +127,7 @@
             <div class="row">
                 <div class="col price-extra-service-card">
 
-                    <img class="img-fluid price-extra-service-card-image" src="image/1-b.png">
+                    <img class="img-fluid price-extra-service-card-image"src="../image/1-b.png">
                     <br>
                     <p class="price-extra-service-card-text-simple">
                         Inside cabinets
@@ -142,7 +142,7 @@
 
                 <div class="col price-extra-service-card">
 
-                    <img class="img-fluid price-extra-service-card-image" src="image/2-b.png">
+                    <img class="img-fluid price-extra-service-card-image"src="../image/2-b.png">
                     <br>
                     <p class="price-extra-service-card-text-simple">
                         Inside fridge
@@ -156,7 +156,7 @@
                 </div>
                 <div class="col price-extra-service-card">
 
-                    <img class="img-fluid price-extra-service-card-image" src="image/3-b.png">
+                    <img class="img-fluid price-extra-service-card-image"src="../image/3-b.png">
                     <br>
                     <p class="price-extra-service-card-text-simple">
                         Inside oven
@@ -170,7 +170,7 @@
                 </div>
                 <div class="col price-extra-service-card">
 
-                    <img class="img-fluid price-extra-service-card-image" src="image/4-b.png">
+                    <img class="img-fluid price-extra-service-card-image"src="../image/4-b.png">
                     <br>
                     <p class="price-extra-service-card-text-simple">
                         Laundry wash & dry
@@ -185,7 +185,7 @@
 
                 <div class="col price-extra-service-card">
 
-                    <img class="img-fluid price-extra-service-card-image" src="image/5-b.png">
+                    <img class="img-fluid price-extra-service-card-image"src="../image/5-b.png">
                     <br>
                     <p class="price-extra-service-card-text-simple">
                         Interior windows
