--- a/Helperland/helperland1.0/Views/Shared/_Layout.cshtml
+++ b/Helperland/helperland1.0/Views/Shared/_Layout.cshtml
@@ -1,48 +1,246 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
+  <!--Custome Css-->
+ 
+  <link rel="stylesheet" href="~/css/style.css" />
+
+  <!--fonts-->
+    <script src="js\faq.js"></script>
+
+
+  
     <title>@ViewData["Title"] - helperland1._0</title>
-    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="~/css/site.css" />
+
+    
 </head>
 <body>
-    <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
-            <div class="container">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">helperland1._0</a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
-                    <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
-    </header>
-    <div class="container">
-        <main role="main" class="pb-3">
-            @RenderBody()
-        </main>
+   <div class="container-fluid  header-container">
+
+
+
+    <nav class="navbar navbar-expand-lg navbar-dark ">
+      <div class="container-fluid">
+        <a class="home-navbar-brand navbar-brand" href="#">
+          <img src="image\logo-large.png" alt="logo">
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
+          aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <div class="navbar-nav home-navbar-nav ms-auto">
+
+            <a class="nav-link home-nav-link nav-link-book-a-cleaner" href="#">Book a Cleaner</a>
+            <a class=" nav-link home-nav-link " href="Public/price"> Prices</a>
+            <a class="nav-link home-nav-link ">Our Guarantee</a>
+            <a class="nav-link home-nav-link ">Blog</a>
+            <a class="nav-link home-nav-link " href="Public/contactus">Contact us</a>
+            <a class="nav-link home-nav-link  nav-link-login">Login</a>
+            <a class="nav-link home-nav-link  nav-link-become-a-helper" asp-controller="UserManagement" asp-action="BecomeAProvider">Become a Helper</a>
+            <a class="nav-link home-nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
+              data-bs-toggle="dropdown" aria-expanded="false">
+              <img src="image\ic-flag.png">
+            </a>
+          </div>
+        </div>
+      </div>
+    </nav>
+
+
+
+    <div class="row header-text-container">
+      <div class="col  align-self-start">
+        <div>
+          <p class="header-title">
+
+            Lorem ipsum text
+          </p>
+        </div>
+
+        <div class="header-text">
+          <p> <img src="image\ic-check.png" alt=""> Lorem ipsum dolor sit amet, consectetur adipiscing</p>
+          <p> <img src="image\ic-check.png" alt=""> Lorem ipsum dolor sit amet, consectetur adipiscing</p>
+          <p> <img src="image\ic-check.png" alt=""> Lorem ipsum dolor sit amet, consectetur adipiscing</p>
+        </div>
+
+
+      </div>
+
     </div>
 
-    <footer class="border-top footer text-muted">
-        <div class="container">
-            &copy; 2022 - helperland1._0 - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-        </div>
-    </footer>
-    <script src="~/lib/jquery/dist/jquery.min.js"></script>
-    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="~/js/site.js" asp-append-version="true"></script>
-    @RenderSection("Scripts", required: false)
+    <div class="row">
+      <div class="col text-center">
+
+        <button class="header-book-button">Let’s Book a Cleaner</button>
+      </div>
+    </div>
+
+
+    <div class="row header-process-container">
+
+      <div class="col-md process-card">
+
+        <img src="image/step-1.png" class="img-fluid" alt="...">
+        <br>
+        <p class="process-card-text">Enter your postcode</p>
+
+      </div>
+
+      <div class="col-md d-none d-lg-block process-card">
+
+        <img src="image/step-arrow-1.png" class="img-fluid" alt="...">
+        <br>
+
+
+      </div>
+
+      <div class="col-md process-card">
+
+        <img src="image/step-2.png" class="img-fluid" alt="...">
+        <br>
+        <p class="process-card-text">Select your plan</p>
+
+      </div>
+
+      <div class="col-md d-none d-lg-block process-card">
+
+        <img src="image/step-arrow-1-copy.png" class="img-fluid" alt="...">
+        <br>
+
+
+      </div>
+
+      <div class="col-md process-card">
+
+        <img src="image/step-3.png" class="img-fluid" alt="...">
+        <br>
+        <p class="process-card-text">Pay securely online</p>
+
+      </div>
+
+      <div class="col-md d-none d-lg-block process-card">
+
+        <img src="image/step-arrow-1.png" class="img-fluid" alt="...">
+        <br>
+
+
+      </div>
+
+      <div class="col-md process-card">
+
+        <img src="image/step-4.png" class="img-fluid" alt="...">
+        <br>
+        <p class="process-card-text">Enjoy amazing service</p>
+
+      </div>
+
+
+
+
+
+
+
+
+    </div>
+
+    <br>
+    <br>
+
+    <div class="row">
+      <div class="col text-center">
+
+        <img src="image/down-custome-new.png" class="img-fluid down-arrow" alt="...">
+
+
+      </div>
+    </div>
+
+
+  </div>
+    
+            @RenderBody()
+
+             <!--footer-->
+
+  <div class="container-fluid footer-container">
+    <div class="row">
+      <div class="col-sm-3 footer-logo-col">
+        <img src="image/footer-logo.png" class="img-fluid footer-logo-image">
+
+
+      </div>
+      <div class="col-sm-6 footer-nav-col">
+
+        <a class="footer-nav-link ">HOME</a>
+        <a class="footer-nav-link"  href="Public/about">ABOUT</a>
+        <a class="footer-nav-link ">TESTIMONIALS</a>
+        <a class="footer-nav-link " href="Public/faq">FAQ</a>
+        <a class="footer-nav-link ">INSURANCE</a>
+        <a class="footer-nav-link ">IMPRESSUM</a>
+
+
+
+
+      </div>
+      <div class="col-sm-3 footer-social-col">
+
+        <img src="image/ic-facebook.png" class="img-fluid footer-social-image">
+        <img src="image/ic-instagram.png" class="img-fluid footer-social-image">
+
+
+
+
+
+      </div>
+    </div>
+  </div>
+
+
+
+  <!--footer ends-->
+
+
+  <!--Privacy start-->
+
+  <div class="row privacy-row">
+    <div class="col-sm-9 privacy-text-col">
+      <p class="privacy-text">
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut feugiat nunc libero, ac malesuada ligula aliquam ac.
+        <a>Privacy Policy</a>
+
+      </p>
+
+    </div>
+    <div class="col-sm-3 privacy-button-col">
+      <button class="privacy-button">
+        OK!
+      </button>
+
+    </div>
+  </div>
+  <!--privacy ends-->
+
+
+
+  <!-- Optional JavaScript; choose one of the two! -->
+
+  <!-- Option 1: Bootstrap Bundle with Popper -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+    crossorigin="anonymous"></script>
+
+    
+
+   
+   
 </body>
 </html>
