Login functionality through session added

--- a/Helperland/helperland1.0/Views/Public/about.cshtml
+++ b/Helperland/helperland1.0/Views/Public/about.cshtml
@@ -13,7 +13,7 @@
     
 
     <!--image-->
-    <img src="../image/hero-banner-img.png" class="img-fluid faq-image">
+    <img src="~/image/hero-banner-img.png" class="img-fluid faq-image">
     <!--image-->
 
     <!--Content-->
@@ -25,7 +25,7 @@
             <p class="faq-content-title-text">
                 A Few words about us
             </p>
-            <img src="../image/faq-seprator.PNG" class="img-fluid faq-content-seprator">
+            <img src="~/image/faq-seprator.PNG" class="img-fluid faq-content-seprator">
 
             <p class="about-content-text">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean molestie convallis tempor. Duis
@@ -53,7 +53,7 @@
             <p class="faq-content-title-text">
                 Our Story
             </p>
-            <img src="../image/faq-seprator.PNG" class="img-fluid faq-content-seprator">
+            <img src="~/image/faq-seprator.PNG" class="img-fluid faq-content-seprator">
 
             <p class="about-content-text">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean molestie convallis tempor. Duis
