--- a/Helperland/helperland1.0/Views/Public/contactus.cshtml
+++ b/Helperland/helperland1.0/Views/Public/contactus.cshtml
@@ -7,7 +7,7 @@
 
 
   <!--image-->
-  <img src="../image/group-16_2.png" class="img-fluid faq-image">
+  <img src="~/image/group-16_2.png" class="img-fluid faq-image">
   <!--image ends-->
 
 
@@ -20,7 +20,7 @@
       <p class="price-content-title-text">
         Contact us
       </p>
-      <img src="../image/faq-seprator.PNG" class="img-fluid price-content-seprator">
+      <img src="~/image/faq-seprator.PNG" class="img-fluid price-content-seprator">
 
 
     </div>
@@ -29,7 +29,7 @@
     <div class="row contact-contactus-card-container">
 
       <div class="col contact-contactus-card">
-        <img src="../image/forma-1_2.png" class="img-fluid">
+        <img src="~/image/forma-1_2.png" class="img-fluid">
         <br><br>
         <p>
           1111 Lorem ipsum text 100, Lorem ipsum AB
@@ -38,7 +38,7 @@
       </div>
       <div class="col contact-contactus-card">
 
-        <img src="../image/phone-call.png" class="img-fluid">
+        <img src="~/image/phone-call.png" class="img-fluid">
         <br><br>
         <p>
           +49 (40) 123 56 7890
@@ -49,7 +49,7 @@
       </div>
       <div class="col contact-contactus-card">
 
-        <img src="../image/vector-smart-object.png" class="img-fluid" style="margin-bottom: 5.5%">
+        <img src="~/image/vector-smart-object.png" class="img-fluid" style="margin-bottom: 5.5%">
         <br><br>
         <p>
           info@helperland.com
