--- a/Helperland/helperland1.0/Views/Public/price.cshtml
+++ b/Helperland/helperland1.0/Views/Public/price.cshtml
@@ -7,7 +7,7 @@
 
 
     <!--image-->
-    <img src="../image/group-18.png" class="img-fluid faq-image">
+    <img src="~/image/group-18.png" class="img-fluid faq-image">
     <!--image ends-->
 
     <!--prices section starts -->
@@ -19,7 +19,7 @@
             <p class="price-content-title-text">
                 Price
             </p>
-            <img src="../image/faq-seprator.PNG" class="img-fluid price-content-seprator">
+            <img src="~/image/faq-seprator.PNG" class="img-fluid price-content-seprator">
 
 
         </div>
@@ -40,13 +40,13 @@
             <div style="text-align: left; margin-left: 25%;">
 
 
-                <p class="price-price-box-check-points"><img class="img-fluid"src="../image/forma-1_5.png">
+                <p class="price-price-box-check-points"><img class="img-fluid"src="~/image/forma-1_5.png">
                     Lower prices</p>
 
-                <p class="price-price-box-check-points"><img class="img-fluid"src="../image/forma-1_5.png">
+                <p class="price-price-box-check-points"><img class="img-fluid"src="~/image/forma-1_5.png">
                     Easy online & secure payment</p>
 
-                <p class="price-price-box-check-points"><img class="img-fluid"src="../image/forma-1_5.png">
+                <p class="price-price-box-check-points"><img class="img-fluid"src="~/image/forma-1_5.png">
                     Easy amendment</p>
 
             </div>
@@ -65,7 +65,7 @@
                 <p class="price-content-title-text">
                     Extra services
                 </p>
-                <img src="../image/faq-seprator.PNG" class="img-fluid price-content-seprator">
+                <img src="~/image/faq-seprator.PNG" class="img-fluid price-content-seprator">
 
 
             </div>
@@ -74,7 +74,7 @@
             <div class="row">
                 <div class="col price-extra-service-card">
 
-                    <img class="img-fluid price-extra-service-card-image"src="../image/1-b.png">
+                    <img class="img-fluid price-extra-service-card-image"src="~/image/1-b.png">
                     <br>
                     <p class="price-extra-service-card-text-simple">
                         Inside cabinets
@@ -89,7 +89,7 @@
 
                 <div class="col price-extra-service-card">
 
-                    <img class="img-fluid price-extra-service-card-image"src="../image/2-b.png">
+                    <img class="img-fluid price-extra-service-card-image"src="~/image/2-b.png">
                     <br>
                     <p class="price-extra-service-card-text-simple">
                         Inside fridge
@@ -103,7 +103,7 @@
                 </div>
                 <div class="col price-extra-service-card">
 
-                    <img class="img-fluid price-extra-service-card-image"src="../image/3-b.png">
+                    <img class="img-fluid price-extra-service-card-image"src="~/image/3-b.png">
                     <br>
                     <p class="price-extra-service-card-text-simple">
                         Inside oven
@@ -117,7 +117,7 @@
                 </div>
                 <div class="col price-extra-service-card">
 
-                    <img class="img-fluid price-extra-service-card-image"src="../image/4-b.png">
+                    <img class="img-fluid price-extra-service-card-image"src="~/image/4-b.png">
                     <br>
                     <p class="price-extra-service-card-text-simple">
                         Laundry wash & dry
@@ -132,7 +132,7 @@
 
                 <div class="col price-extra-service-card">
 
-                    <img class="img-fluid price-extra-service-card-image"src="../image/5-b.png">
+                    <img class="img-fluid price-extra-service-card-image"src="~/image/5-b.png">
                     <br>
                     <p class="price-extra-service-card-text-simple">
                         Interior windows
@@ -163,7 +163,7 @@
             <p class="price-content-title-text">
                 What we include in cleaning
             </p>
-            <img src="../image/faq-seprator.PNG" class="img-fluid price-content-seprator">
+            <img src="~/image/faq-seprator.PNG" class="img-fluid price-content-seprator">
 
 
         </div>
@@ -173,7 +173,7 @@
         <div class="row price-include-row">
             <div class=" col price-include-card">
 
-                <img src="../image/group-18_3.png" class="price-include-card-image">
+                <img src="~/image/group-18_3.png" class="price-include-card-image">
                 <br><br>
                 <div style="text-align: left;">
 
@@ -183,7 +183,7 @@
                     </p>
 
                     <p class="price-include-card-text-simple">
-                        <img src="../image/right-arrow.png" class="img-fluid">
+                        <img src="~/image/right-arrow.png" class="img-fluid">
 
                         Dust all accessible surfaces
 
@@ -191,20 +191,20 @@
                     </p>
 
                     <p class="price-include-card-text-simple">
-                        <img src="../image/right-arrow.png" class="img-fluid">
+                        <img src="~/image/right-arrow.png" class="img-fluid">
 
                         Wipe down all mirrors and glass fixtures
 
 
                     </p>
                     <p class="price-include-card-text-simple">
-                        <img src="../image/right-arrow.png" class="img-fluid">
+                        <img src="~/image/right-arrow.png" class="img-fluid">
 
                         Clean all floor surfaces
 
                     </p>
                     <p class="price-include-card-text-simple">
-                        <img src="../image/right-arrow.png" class="img-fluid">
+                        <img src="~/image/right-arrow.png" class="img-fluid">
 
                         Take out garbage and recycling
 
@@ -219,7 +219,7 @@
 
             <div class=" col price-include-card">
 
-                <img src="../image/group-18_4.png" class="price-include-card-image">
+                <img src="~/image/group-18_4.png" class="price-include-card-image">
 
                 <br><br>
                 <div style="text-align: left;">
@@ -230,7 +230,7 @@
                     </p>
 
                     <p class="price-include-card-text-simple">
-                        <img src="../image/right-arrow.png" class="img-fluid">
+                        <img src="~/image/right-arrow.png" class="img-fluid">
 
                         Wash and sanitize the toilet, shower, tub, sink
 
@@ -238,28 +238,28 @@
                     </p>
 
                     <p class="price-include-card-text-simple">
-                        <img src="../image/right-arrow.png" class="img-fluid">
+                        <img src="~/image/right-arrow.png" class="img-fluid">
 
                         Dust all accessible surfaces
 
 
                     </p>
                     <p class="price-include-card-text-simple">
-                        <img src="../image/right-arrow.png" class="img-fluid">
+                        <img src="~/image/right-arrow.png" class="img-fluid">
 
                         Wipe down all mirrors and glass fixtures
 
 
                     </p>
                     <p class="price-include-card-text-simple">
-                        <img src="../image/right-arrow.png" class="img-fluid">
+                        <img src="~/image/right-arrow.png" class="img-fluid">
 
                         Clean all floor surfaces
 
 
                     </p>
                     <p class="price-include-card-text-simple">
-                        <img src="../image/right-arrow.png" class="img-fluid">
+                        <img src="~/image/right-arrow.png" class="img-fluid">
                         Take out garbage and recycling
 
                     </p>
@@ -270,7 +270,7 @@
 
             <div class=" col price-include-card">
 
-                <img src="../image/group-18_2.png" class="price-include-card-image">
+                <img src="~/image/group-18_2.png" class="price-include-card-image">
                 <br><br>
                 <div style="text-align: left;">
 
@@ -280,32 +280,32 @@
                     </p>
 
                     <p class="price-include-card-text-simple">
-                        <img src="../image/right-arrow.png" class="img-fluid">
+                        <img src="~/image/right-arrow.png" class="img-fluid">
 
                         Dust all accessible surfaces
 
                     </p>
 
                     <p class="price-include-card-text-simple">
-                        <img src="../image/right-arrow.png" class="img-fluid">
+                        <img src="~/image/right-arrow.png" class="img-fluid">
 
                         Empty sink and load up dishwasher
 
                     </p>
                     <p class="price-include-card-text-simple">
-                        <img src="../image/right-arrow.png" class="img-fluid">
+                        <img src="~/image/right-arrow.png" class="img-fluid">
 
                         Wipe down exterior of stove, oven and fridge
 
                     </p>
                     <p class="price-include-card-text-simple">
-                        <img src="../image/right-arrow.png" class="img-fluid">
+                        <img src="~/image/right-arrow.png" class="img-fluid">
 
                         Clean all floor surfaces
 
                     </p>
                     <p class="price-include-card-text-simple">
-                        <img src="../image/right-arrow.png" class="img-fluid">
+                        <img src="~/image/right-arrow.png" class="img-fluid">
                         Take out garbage and recycling
 
                     </p>
@@ -335,7 +335,7 @@
             <p class="price-content-title-text">
                 Why Helperland
             </p>
-            <img src="../image/faq-seprator.PNG" class="img-fluid price-content-seprator">
+            <img src="~/image/faq-seprator.PNG" class="img-fluid price-content-seprator">
 
 
         </div>
@@ -366,7 +366,7 @@
 
             <div class="col-md-4 price-why-center">
 
-                <img src="../image/the-best-img-1.png" class="img-fluid">
+                <img src="~/image/the-best-img-1.png" class="img-fluid">
 
             </div>
 
