--- a/Helperland/helperland1.0/Views/UserManagement/BecomeAProvider.cshtml
+++ b/Helperland/helperland1.0/Views/UserManagement/BecomeAProvider.cshtml
@@ -39,7 +39,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark ">
       <div class="container-fluid">
         <a class="home-navbar-brand navbar-brand" href="#">
-          <img src="../image/logo-large.png" alt="logo">
+          <img src="~/image/logo-large.png" alt="logo">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
           aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -57,7 +57,7 @@
             <a class="nav-link home-nav-link  nav-link-become-a-helper">Become a Helper</a>
             <a class="nav-link home-nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
               data-bs-toggle="dropdown" aria-expanded="false">
-              <img src="../image/ic-flag.png">
+              <img src="~/image/ic-flag.png">
             </a>
           </div>
         </div>
@@ -126,7 +126,7 @@
        
 
         <button type="submit" class="become-service-provider-form-button">Submit
-          <img style="max-width: 30%; max-height: 30%;" src="../image/right-white-arrow.png">
+          <img style="max-width: 30%; max-height: 30%;" src="~/image/right-white-arrow.png">
         </button>
         <br>
 
@@ -135,7 +135,7 @@
 
 
     <br><br>
-    <img src="../image/down-custome-new.png" style="max-width: 5%;">
+    <img src="~/image/down-custome-new.png" style="max-width: 5%;">
     <br><br>
 
 
@@ -163,7 +163,7 @@
     <div class="row">
 
       <div class="col-md-1 d-none d-lg-block">
-        <img src="../image/blog-left-bg.png" class="img-fluid">
+        <img src="~/image/blog-left-bg.png" class="img-fluid">
 
       </div>
 
@@ -190,13 +190,13 @@
             </p>
 
             <p class="become-service-provider-content-card-text-normal">
-              Read more <img src="../image/shape-2.png" </p>
+              Read more <img src="~/image/shape-2.png" /> </p>
 
 
           </div>
           <div class="col-md-6 become-service-provider-content-card-image">
 
-            <img style="max-height: 260px; max-width: 260px; " src="../image/group-182.png">
+            <img style="max-height: 260px; max-width: 260px; " src="~/image/group-182.png">
 
           </div>
 
@@ -211,7 +211,7 @@
 
           <div class="col-md-6 become-service-provider-content-card-image" style="text-align: left;">
 
-            <img style="max-height: 260px; max-width: 260px;" src="../image/group-181.png">
+            <img style="max-height: 260px; max-width: 260px;" src="~/image/group-181.png">
 
           </div>
 
@@ -228,7 +228,7 @@
             </p>
 
             <p class="become-service-provider-content-card-text-normal">
-              Read more <img src="../image/shape-2.png" </p>
+              Read more <img src="~/image/shape-2.png" /> </p>
 
 
           </div>
@@ -254,13 +254,13 @@
             </p>
 
             <p class="become-service-provider-content-card-text-normal">
-              Read more <img src="../image/shape-2.png" /> </p>
+              Read more <img src="~/image/shape-2.png" /> </p>
 
 
           </div>
           <div class="col-md-4 become-service-provider-content-card-image">
 
-            <img style="max-height: 260px; max-width: 260px;" src="../image/group-183.png">
+            <img style="max-height: 260px; max-width: 260px;" src="~/image/group-183.png">
 
           </div>
 
@@ -280,7 +280,7 @@
 
       <div class="col-md-1 d-none d-lg-block">
 
-        <img src="../image/blog-right-bg.png" class="img-fluid">
+        <img src="~/image/blog-right-bg.png" class="img-fluid">
 
       </div>
 
@@ -331,7 +331,7 @@
   <div class="container-fluid footer-container">
     <div class="row">
       <div class="col-sm-3 footer-logo-col">
-        <img src="../image/footer-logo.png" class="img-fluid footer-logo-image">
+        <img src="~/image/footer-logo.png" class="img-fluid footer-logo-image">
 
 
       </div>
@@ -350,8 +350,8 @@
       </div>
       <div class="col-sm-3 footer-social-col">
 
-        <img src="../image/ic-facebook.png" class="img-fluid footer-social-image">
-        <img src="../image/ic-instagram.png" class="img-fluid footer-social-image">
+        <img src="~/image/ic-facebook.png" class="img-fluid footer-social-image">
+        <img src="~/image/ic-instagram.png" class="img-fluid footer-social-image">
 
         <hr>
 
