--- a/Helperland/helperland1.0/Views/Public/Index.cshtml
+++ b/Helperland/helperland1.0/Views/Public/Index.cshtml
@@ -1,11 +1,182 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = null;
 }
 
 
 
 
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
+  <!--Custome Css-->
+ 
+  <link rel="stylesheet" href="~/css/style.css" />
+
+  <!--fonts-->
+    <script src="js\faq.js"></script>
+
+
+  
+    <title>@ViewData["Title"] - helperland1._0</title>
+
+    
+</head>
+<body>
+   <div class="container-fluid  header-container">
+
+
+
+    <nav class="navbar navbar-expand-lg navbar-dark ">
+      <div class="container-fluid">
+        <a class="home-navbar-brand navbar-brand" href="#">
+          <img src="~/image/logo-large.png" alt="logo">
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
+          aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <div class="navbar-nav home-navbar-nav ms-auto">
+
+            <a class="nav-link home-nav-link nav-link-book-a-cleaner" href="#">Book a Cleaner</a>
+            <a class=" nav-link home-nav-link " asp-controller="Public" asp-action="Price"> Prices</a>
+            <a class="nav-link home-nav-link ">Our Guarantee</a>
+            <a class="nav-link home-nav-link ">Blog</a>
+            <a class="nav-link home-nav-link " asp-controller="Public" asp-action="Contactus">Contact us</a>
+            <a class="nav-link home-nav-link  nav-link-login" id="login-nav-link" data-bs-toggle="modal" data-bs-target="#exampleModal">Login</a>
+            <a class="nav-link home-nav-link  nav-link-become-a-helper" asp-controller="UserManagement" asp-action="BecomeAProvider">Become a Helper</a>
+            <a class="nav-link home-nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
+              data-bs-toggle="dropdown" aria-expanded="false">
+              <img src="~/image/ic-flag.png">
+            </a>
+          </div>
+        </div>
+      </div>
+    </nav>
+
+
+
+    <div class="row header-text-container">
+      <div class="col  align-self-start">
+        <div>
+          <p class="header-title">
+
+            Lorem ipsum text
+          </p>
+        </div>
+
+        <div class="header-text">
+          <p> <img src="image\ic-check.png" alt=""> Lorem ipsum dolor sit amet, consectetur adipiscing</p>
+          <p> <img src="image\ic-check.png" alt=""> Lorem ipsum dolor sit amet, consectetur adipiscing</p>
+          <p> <img src="image\ic-check.png" alt=""> Lorem ipsum dolor sit amet, consectetur adipiscing</p>
+        </div>
+
+
+      </div>
+
+    </div>
+
+    <div class="row">
+      <div class="col text-center">
+
+        <button class="header-book-button">Let’s Book a Cleaner</button>
+      </div>
+    </div>
+
+
+    <div class="row header-process-container">
+
+      <div class="col-md process-card">
+
+        <img src="~/image/step-1.png" class="img-fluid" alt="...">
+        <br>
+        <p class="process-card-text">Enter your postcode</p>
+
+      </div>
+
+      <div class="col-md d-none d-lg-block process-card">
+
+        <img src="~/image/step-arrow-1.png" class="img-fluid" alt="...">
+        <br>
+
+
+      </div>
+
+      <div class="col-md process-card">
+
+        <img src="~/image/step-2.png" class="img-fluid" alt="...">
+        <br>
+        <p class="process-card-text">Select your plan</p>
+
+      </div>
+
+      <div class="col-md d-none d-lg-block process-card">
+
+        <img src="~/image/step-arrow-1-copy.png" class="img-fluid" alt="...">
+        <br>
+
+
+      </div>
+
+      <div class="col-md process-card">
+
+        <img src="~/image/step-3.png" class="img-fluid" alt="...">
+        <br>
+        <p class="process-card-text">Pay securely online</p>
+
+      </div>
+
+      <div class="col-md d-none d-lg-block process-card">
+
+        <img src="~/image/step-arrow-1.png" class="img-fluid" alt="...">
+        <br>
+
+
+      </div>
+
+      <div class="col-md process-card">
+
+        <img src="~/image/step-4.png" class="img-fluid" alt="...">
+        <br>
+        <p class="process-card-text">Enjoy amazing service</p>
+
+      </div>
+
+
+
+
+
+
+
+
+    </div>
+
+    <br>
+    <br>
+
+    <div class="row">
+      <div class="col text-center">
+
+        <img src="~/image/down-custome-new.png" class="img-fluid down-arrow" alt="...">
+
+
+      </div>
+    </div>
+
+
+  </div>
+    
+     
 
 
 
@@ -25,7 +196,7 @@
     <div class="row why-row">
 
       <div class="col why-card">
-        <img src="image/helper-img-1.png" class="img-fluid why-card-image">
+        <img src="~/image/helper-img-1.png" class="img-fluid why-card-image">
         <p class="why-card-text-big">
           Experience & Vetted Professionals
         </p>
@@ -38,7 +209,7 @@
       </div>
 
       <div class="col why-card">
-        <img src="image/group-23.png" class="img-fluid why-card-image">
+        <img src="~/image/group-23.png" class="img-fluid why-card-image">
         <p class="why-card-text-big">
           Secure Online Payment
         </p>
@@ -52,7 +223,7 @@
       </div>
 
       <div class="col why-card">
-        <img src="image/group-24.png" class="img-fluid why-card-image">
+        <img src="~/image/group-24.png" class="img-fluid why-card-image">
         <p class="why-card-text-big">
           Dedicated Customer Service
         </p>
@@ -83,7 +254,7 @@
     <div class="row">
 
       <div class="col-md-1 d-none d-lg-block">
-        <img src="image/blog-left-bg.png" class="img-fluid">
+        <img src="~/image/blog-left-bg.png" class="img-fluid">
 
       </div>
 
@@ -108,7 +279,7 @@
 
           </div>
           <div class="col-md-4">
-            <img src="image/group-36.png" class="img-fluid">
+            <img src="~/image/group-36.png" class="img-fluid">
           </div>
 
         </div>
@@ -121,7 +292,7 @@
 
         <div class="row blog-row">
           <div class="col blog-card">
-            <img src="image/group-28.png" class="img-fluid blog-card-image">
+            <img src="~/image/group-28.png" class="img-fluid blog-card-image">
             <p class="blog-card-title">
               Lorem ipsum dolor sit amet
             </p>
@@ -137,7 +308,7 @@
             <p class="blog-card-link">
               Read the Post
 
-              <img src="image/shape-2.png" class="img-fluid">
+              <img src="~/image/shape-2.png" class="img-fluid">
 
             </p>
 
@@ -145,7 +316,7 @@
           </div>
 
           <div class="col blog-card">
-            <img src="image/group-29.png" class="img-fluid blog-card-image">
+            <img src="~/image/group-29.png" class="img-fluid blog-card-image">
             <p class="blog-card-title">
               Lorem ipsum dolor sit amet
             </p>
@@ -161,7 +332,7 @@
             <p class="blog-card-link">
               Read the Post
 
-              <img src="image/shape-2.png" class="img-fluid">
+              <img src="~/image/shape-2.png" class="img-fluid">
 
             </p>
 
@@ -169,7 +340,7 @@
           </div>
 
           <div class="col blog-card">
-            <img src="image/group-30.png" class="img-fluid blog-card-image">
+            <img src="~/image/group-30.png" class="img-fluid blog-card-image">
             <p class="blog-card-title">
               Lorem ipsum dolor sit amet
             </p>
@@ -185,7 +356,7 @@
             <p class="blog-card-link">
               Read the Post
 
-              <img src="image/shape-2.png" class="img-fluid">
+              <img src="~/image/shape-2.png" class="img-fluid">
 
             </p>
 
@@ -197,7 +368,7 @@
 
       <div class="col-md-1 d-none d-lg-block">
 
-        <img src="image/blog-right-bg.png" class="img-fluid">
+        <img src="~/image/blog-right-bg.png" class="img-fluid">
 
       </div>
 
@@ -221,7 +392,7 @@
       <div class="col customer-card">
         <div class="row">
           <div class="col-sm-4">
-            <img src="image/group-31.png" class="img-fluid customer-card-image">
+            <img src="~/image/group-31.png" class="img-fluid customer-card-image">
 
           </div>
           <div class="col-sm-6">
@@ -231,7 +402,7 @@
 
           </div>
           <div class="col-sm-2">
-            <img src="image/message.png" class="img-fluid customer-card-image">
+            <img src="~/image/message.png" class="img-fluid customer-card-image">
 
           </div>
 
@@ -250,7 +421,7 @@
         <p class="customer-card-link">
           Read the Post
 
-          <img src="image/shape-2.png" class="img-fluid">
+          <img src="~/image/shape-2.png" class="img-fluid">
 
         </p>
 
@@ -260,7 +431,7 @@
       <div class="col customer-card">
         <div class="row">
           <div class="col-sm-4">
-            <img src="image/group-32.png" class="img-fluid customer-card-image">
+            <img src="~/image/group-32.png" class="img-fluid customer-card-image">
 
           </div>
           <div class="col-sm-6">
@@ -270,7 +441,7 @@
 
           </div>
           <div class="col-sm-2">
-            <img src="image/message.png" class="img-fluid customer-card-image">
+            <img src="~/image/message.png" class="img-fluid customer-card-image">
 
           </div>
 
@@ -288,7 +459,7 @@
         <p class="customer-card-link">
           Read the Post
 
-          <img src="image/shape-2.png" class="img-fluid">
+          <img src="~/image/shape-2.png" class="img-fluid">
 
         </p>
 
@@ -298,7 +469,7 @@
       <div class="col customer-card">
         <div class="row">
           <div class="col-sm-4">
-            <img src="image/group-33.png" class="img-fluid customer-card-image">
+            <img src="~/image/group-33.png" class="img-fluid customer-card-image">
 
           </div>
           <div class="col-sm-6">
@@ -308,7 +479,7 @@
 
           </div>
           <div class="col-sm-2">
-            <img src="image/message.png" class="img-fluid customer-card-image">
+            <img src="~/image/message.png" class="img-fluid customer-card-image">
 
           </div>
 
@@ -326,7 +497,7 @@
         <p class="customer-card-link">
           Read the Post
 
-          <img src="image/shape-2.png" class="img-fluid">
+          <img src="~/image/shape-2.png" class="img-fluid">
 
         </p>
 
@@ -340,7 +511,7 @@
     <div class="row contact-row">
 
       <div class="col-sm-2 contact-col-top">
-        <img src="image/top-arrow.png" class="img-fluid contact-col-top-image">
+        <img src="~/image/top-arrow.png" class="img-fluid contact-col-top-image">
 
 
       </div>
@@ -365,7 +536,7 @@
       </div>
 
       <div class="col-sm-2 contact-col-faq contact-col-faq-image">
-        <img src="image/layer-598.png" class="img-fluid">
+        <img src="~/image/layer-598.png" class="img-fluid">
 
       </div>
 
@@ -375,6 +546,94 @@
 
   </div>
 
+  @await Html.PartialAsync("loginpopup")
+
   <!--customer section ends-->
 
  
+
+
+             <!--footer-->
+
+  <div class="container-fluid footer-container">
+    <div class="row">
+      <div class="col-sm-3 footer-logo-col">
+        <img src="~/image/footer-logo.png" class="img-fluid footer-logo-image">
+
+
+      </div>
+      <div class="col-sm-6 footer-nav-col">
+
+        <a class="footer-nav-link ">HOME</a>
+        <a class="footer-nav-link"  href="Public/about">ABOUT</a>
+        <a class="footer-nav-link ">TESTIMONIALS</a>
+        <a class="footer-nav-link " href="Public/faq">FAQ</a>
+        <a class="footer-nav-link ">INSURANCE</a>
+        <a class="footer-nav-link ">IMPRESSUM</a>
+
+
+
+
+      </div>
+      <div class="col-sm-3 footer-social-col">
+
+        <img src="~/image/ic-facebook.png" class="img-fluid footer-social-image">
+        <img src="~/image/ic-instagram.png" class="img-fluid footer-social-image">
+
+
+
+
+
+      </div>
+    </div>
+  </div>
+
+
+
+  <!--footer ends-->
+
+
+  <!--Privacy start-->
+
+  <div class="row privacy-row">
+    <div class="col-sm-9 privacy-text-col">
+      <p class="privacy-text">
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut feugiat nunc libero, ac malesuada ligula aliquam ac.
+        <a>Privacy Policy</a>
+
+      </p>
+
+    </div>
+    <div class="col-sm-3 privacy-button-col">
+      <button class="privacy-button">
+        OK!
+      </button>
+
+    </div>
+  </div>
+  <!--privacy ends-->
+
+
+
+  <!-- Optional JavaScript; choose one of the two! -->
+
+  <!-- Option 1: Bootstrap Bundle with Popper -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+    crossorigin="anonymous"></script>
+
+     <script>
+        const url = new URLSearchParams(window.location.search);
+        if (url == "loginModal=true" || url == "loginFail=true") {
+            document.getElementById("login-nav-link").click();
+        }
+       // if (url == "mailSended=true") {
+        //    document.getElementById("mailSendedbtn").click();
+        //}
+    </script>
+
+
+   
+   
+</body>
+</html>
