--- a/Helperland/helperland1.0/Views/Public/faq.cshtml
+++ b/Helperland/helperland1.0/Views/Public/faq.cshtml
@@ -13,7 +13,7 @@
  
 
   <!--image-->
-  <img src="../image/faq-banner.png" class="img-fluid faq-image">
+  <img src="~/image/faq-banner.png" class="img-fluid faq-image">
   <!--image-->
 
   <!--Content-->
@@ -26,7 +26,7 @@
       <p class="faq-content-title-text">
         FAQs
       </p>
-      <img src="../image/faq-seprator.PNG" class="img-fluid faq-content-seprator">
+      <img src="~/image/faq-seprator.PNG" class="img-fluid faq-content-seprator">
 
       <p class="faq-content-title-intro">
         Whether you are Customer or Service provider,<br> We have tried our best to solve all your queries and
@@ -53,7 +53,7 @@
       
       <div class="row">
         <div class="col-1">
-          <a href="#faq-1"   data-bs-toggle="collapse"><img src="../image/right-arrow.png" id="faqBulletImg"  onclick="changeImage()"></a>
+          <a href="#faq-1"   data-bs-toggle="collapse"><img src="~/image/right-arrow.png" id="faqBulletImg"  onclick="changeImage()"></a>
   
         </div>
         <div class="col-11">
@@ -78,7 +78,7 @@
 
       <div class="row">
         <div class="col-1">
-          <a href="#faq-2"  data-bs-toggle="collapse"><img src="../image/down-arrow.png"></a>
+          <a href="#faq-2"  data-bs-toggle="collapse"><img src="~/image/down-arrow.png"></a>
   
         </div>
         <div class="col-11">
@@ -103,7 +103,7 @@
 
       <div class="row">
         <div class="col-1">
-          <a href="#faq-3"  data-bs-toggle="collapse"><img src="../image/down-arrow.png"></a>
+          <a href="#faq-3"  data-bs-toggle="collapse"><img src="~/image/down-arrow.png"></a>
   
         </div>
         <div class="col-11">
@@ -128,7 +128,7 @@
 
       <div class="row">
         <div class="col-1">
-          <a href="#faq-4"  data-bs-toggle="collapse"><img src="../image/down-arrow.png"></a>
+          <a href="#faq-4"  data-bs-toggle="collapse"><img src="~/image/down-arrow.png"></a>
   
         </div>
         <div class="col-11">
@@ -152,7 +152,7 @@
       <br>
       <div class="row">
         <div class="col-1">
-          <a href="#faq-5"  data-bs-toggle="collapse"><img src="../image/down-arrow.png"></a>
+          <a href="#faq-5"  data-bs-toggle="collapse"><img src="~/image/down-arrow.png"></a>
   
         </div>
         <div class="col-11">
@@ -176,7 +176,7 @@
       <br>
       <div class="row">
         <div class="col-1">
-          <a href="#faq-6"  data-bs-toggle="collapse"><img src="../image/down-arrow.png"></a>
+          <a href="#faq-6"  data-bs-toggle="collapse"><img src="~/image/down-arrow.png"></a>
   
         </div>
         <div class="col-11">
@@ -201,7 +201,7 @@
       <br>
       <div class="row">
         <div class="col-1">
-          <a href="#faq-7"  data-bs-toggle="collapse"><img src="../image/down-arrow.png"></a>
+          <a href="#faq-7"  data-bs-toggle="collapse"><img src="~/image/down-arrow.png"></a>
   
         </div>
         <div class="col-11">
@@ -226,7 +226,7 @@
 
       <div class="row">
         <div class="col-1">
-          <a href="#faq-8"  data-bs-toggle="collapse"><img src="../image/down-arrow.png"></a>
+          <a href="#faq-8"  data-bs-toggle="collapse"><img src="~/image/down-arrow.png"></a>
   
         </div>
         <div class="col-11">
@@ -251,7 +251,7 @@
 
       <div class="row">
         <div class="col-1">
-          <a href="#faq-9"  data-bs-toggle="collapse"><img src="../image/down-arrow.png"></a>
+          <a href="#faq-9"  data-bs-toggle="collapse"><img src="~/image/down-arrow.png"></a>
   
         </div>
         <div class="col-11">
