--- a/Helperland/helperland1.0/Views/Shared/_Layout1.cshtml
+++ b/Helperland/helperland1.0/Views/Shared/_Layout1.cshtml
@@ -1,14 +1,15 @@
-﻿<!DOCTYPE html>
+﻿@model helperland1._0.Models.LoginUser
+<!DOCTYPE html>
 
 <html>
 <head>
-      <!-- Required meta tags -->
+    <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+          integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
     <!--Custome Css-->
     <link rel="stylesheet" href="~/css/style.css">
@@ -19,22 +20,22 @@
 
 
 
-    
+
     <title>@ViewBag.Title</title>
 </head>
 <body>
 
-     <!--nav bar-->
+    <!--nav bar-->
 
 
 
     <nav class="navbar faq-navbar navbar-expand-md navbar-dark">
         <div class="container-fluid">
             <a class="navbar-brand faq-navbar-brand" href="#">
-                <img src="../image/logo-small.png" alt="logo">
+                <img src="~/image/logo-small.png" alt="logo">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
-                aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                    aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
@@ -45,20 +46,21 @@
                     <a class="nav-link faq-nav-link  ">Warrenty</a>
                     <a class="nav-link faq-nav-link ">Blog</a>
                     <a class=" nav-link faq-nav-link " asp-controller="Public" asp-action="contactus">Contact</a>
-                    <a class="nav-link faq-nav-link  faq-nav-link-border">Login</a>
+                    <a class="nav-link faq-nav-link  faq-nav-link-border"  asp-controller="Public" asp-action="Index" asp-route-loginModal="true">Login</a>
                     <a class="nav-link faq-nav-link  faq-nav-link-border" asp-controller="UserManagement" asp-action="BecomeAProvider">Become a Helper</a>
                     <a class="nav-link faq-nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
-                        data-bs-toggle="dropdown" aria-expanded="false">
+                       data-bs-toggle="dropdown" aria-expanded="false">
                         <img src="image\ic-flag.png">
                     </a>
                 </div>
             </div>
         </div>
     </nav>
-   
-        @RenderBody()
 
-         <!--footer starts-->
+   
+    @RenderBody()
+
+    <!--footer starts-->
 
 
 
@@ -92,15 +94,15 @@
     <div class="container-fluid footer-container">
         <div class="row">
             <div class="col-sm-3 footer-logo-col">
-                <img src="../image/footer-logo.png" class="img-fluid footer-logo-image">
+                <img src="~/image/footer-logo.png" class="img-fluid footer-logo-image">
 
 
             </div>
             <div class="col-sm-6 footer-nav-col">
 
-                <a class="footer-nav-link asp-controller="Public" asp-action="Index">HOME</a>
+                <a class="footer-nav-link" asp-controller="Public" asp-action="Index">HOME</a>
                 <a class="footer-nav-link  " asp-controller="Public" asp-action="about">ABOUT</a>
-                <a class="footer-nav-link " >TESTIMONIALS</a>
+                <a class="footer-nav-link ">TESTIMONIALS</a>
                 <a class="footer-nav-link " asp-controller="Public" asp-action="faq">FAQ</a>
                 <a class="footer-nav-link ">INSURANCE</a>
                 <a class="footer-nav-link ">IMPRESSUM</a>
@@ -111,8 +113,8 @@
             </div>
             <div class="col-sm-3 footer-social-col">
 
-                <img src="../image/ic-facebook.png" class="img-fluid footer-social-image">
-                <img src="../image/ic-instagram.png" class="img-fluid footer-social-image">
+                <img src="~/image/ic-facebook.png" class="img-fluid footer-social-image">
+                <img src="~/image/ic-instagram.png" class="img-fluid footer-social-image">
 
                 <hr>
 
@@ -132,23 +134,15 @@
         <br>
 
         <!--footer ends-->
-
-
-
-
-
-
         <!-- Optional JavaScript; choose one of the two! -->
-
-
         <!-- Option 1: Bootstrap Bundle with Popper -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-            crossorigin="anonymous"></script>
+                integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+                crossorigin="anonymous"></script>
 
-      </div>
+    </div>
 
 
-   
+
 </body>
 </html>
