--- a/Helperland/helperland1.0/wwwroot/css/style.css
+++ b/Helperland/helperland1.0/wwwroot/css/style.css
@@ -15,23 +15,19 @@
   
      
   }
-      
-      
-    
-    
-
+.modal-content {
+   
+    padding: 5%;
+    margin: 10%;
+    text-align:center;
+}
 /*Home page*/
-
-
-
 /*header*/
-
-
-.formwarning{
-    text-align:left;
+.formwarning {
+    text-align: left;
     font-size: 12px;
-    color:red;
-    font-weight:100;
+    color: red;
+    font-weight: 100;
 }
 .header-container {
     background-image: url("../image/LandingPagebackgroundimage.png");
