--- a/Helperland/helperland1.0/Views/UserManagement/BecomeAProvider.cshtml
+++ b/Helperland/helperland1.0/Views/UserManagement/BecomeAProvider.cshtml
@@ -70,7 +70,11 @@
         Register Now!
       </p>
 
-
+        <div class="@TempData["add"] alert-danger alert-dismissible fade" role="alert" id="loginFailAlert">
+                    
+                    @TempData["msg"]
+                    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                </div>
       <form  asp-controller="UserManagement" asp-action="BecomeAProvider" method='post'>
         <div class="form-group">
            <span asp-validation-for="FirstName" class="formwarning"></span>
