--- a/Helperland/helperland1.0/Views/Customer/CustomerServiceHistory.cshtml
+++ b/Helperland/helperland1.0/Views/Customer/CustomerServiceHistory.cshtml
@@ -1,7 +1,7 @@
 ﻿<section class="welcome">
 
 
-        <h1>Welcome, <b>Vedant!</b> </h1>
+        <h1>Welcome, <b>@ViewBag.Name</b> </h1>
     </section>
 
     <section class="main_service clearfix">
