--- a/Helperland/helperland1.0/Views/Shared/loginpopup.cshtml
+++ b/Helperland/helperland1.0/Views/Shared/loginpopup.cshtml
@@ -37,7 +37,7 @@
 
                     </div>
                 </form>
-                <a href="#">Forgot password?</a>
+                <a data-bs-toggle="modal" data-bs-target="#forgetPwdModal">Forgot password?</a>
                 <p>Don't have and account? <a asp-controller="UserManagement" asp-action="CustomerSignUp">Register Now</a></p>
             </div>
 
