Pincode check and Schedule function completed

--- a/Helperland/helperland1.0/Views/Customer/CustomerServiceHistory.cshtml
+++ b/Helperland/helperland1.0/Views/Customer/CustomerServiceHistory.cshtml
@@ -1,4 +1,8 @@
-﻿<section class="welcome">
+﻿@{
+    Layout = "_Layout1";
+
+}
+<section class="welcome">
 
 
         <h1>Welcome, <b>@ViewBag.Name</b> </h1>
