--- a/Helperland/helperland1.0/Views/Public/Index.cshtml
+++ b/Helperland/helperland1.0/Views/Public/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+   ViewBag.title="Home";
     Layout = null;
 }
 
@@ -27,7 +27,7 @@
 
 
   
-    <title>@ViewData["Title"] - helperland1._0</title>
+    <title>@ViewBag.title</title>
 
     
 </head>
