--- a/Helperland/helperland1.0/Views/Public/contactus.cshtml
+++ b/Helperland/helperland1.0/Views/Public/contactus.cshtml
@@ -57,6 +57,8 @@
 
       </div>
 
+       
+
 
     </div>
 
@@ -120,6 +122,8 @@
        
         <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"  placeholder="Message"></textarea>
       </div>
+      <br />
+       <Button type="submit" class="nav-link faq-nav-link  faq-nav-link-border mx-auto" style="padding: 1% 20% 1% 20%">Submit</Button>
 
     </form>
 
