--- a/Helperland/helperland1.0/Views/Shared/_Layout1.cshtml
+++ b/Helperland/helperland1.0/Views/Shared/_Layout1.cshtml
@@ -12,16 +12,20 @@
           integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
     <!--Custome Css-->
+   @{ if(@ViewBag.title!="bookservice")
+    {
     <link rel="stylesheet" href="~/css/style.css">
+    }}
+    @RenderSection("Custom",required:false)
 
     <!--JS-->
-    <script src="js\faq.js"></script>
+    <script src="~/js/faq.js"></script>
 
 
 
 
 
-    <title>@ViewBag.Title</title>
+    <title>@ViewBag.title</title>
 </head>
 <body>
 
